<resources>
    <string name="app_name">QuestionGame</string>
    <string name="question_australia">استرالیا بزرگ ترین قاره جهان است.</string>
    <string name="question_oceans">اقیانوس آرام بزرگ ترین اقیانوس جهان است.</string>
    <string name="question_mideast">همه کشورهای خاورمیانه عرب زبان هستند.</string>
    <string name="question_africa">مصر در قاره آفریقا قرار دارد.</string>
    <string name="question_americas">کشور آمریکا پرجمعیت ترین کشور دنیا است.</string>
    <string name="question_asia">قاره آسیا در نیم کره جنوبی جهان واقع شده است.</string>
    <string name="true_answer">صحیح است</string>
    <string name="false_answer">صحیح نیست</string>
    <string name="score">امتیاز شما:</string>
    <string name="score_num"></string>
    <string name="win">تبریک شما برنده شدید</string>
    <string name="fail">احتیاج به تلاش بیشتر داری</string>
    <string name="warn_question">آیا اطمینان دارید که میخواهید پاسخ را ببینید؟</string>
    <string name="do_not_judge">و خداوند تقلب کنندگان را دوست ندارد:)))</string>
    <string name="cheat_answer">مشاهده پاسخ</string>
    <string name="go_back">بازگشت</string>
    <string name="cheat">تقلب</string>
    <string name="large_font">LARGE</string>
    <string name="medium_font">MEDIUM</string>
    <string name="small_font">SMALL</string>
    <string name="set_font_txt">تغییر فونت</string>
    <string name="set_change_background_txt">تغییر پس زمینه</string>
    <string name="set_change_color_txt">تغییر رنگ فوشته</string>
    <string name="set_change_hidden_state_txt">غیر فعال کردن</string>
    <string name="radio_hide_check">دکمه های درست و نادرست</string>
    <string name="radio_hide_np">دکمه های قبل و بعد</string>
    <string name="radio_hide_fl">دکمه های رفتن به اولین و آخرین سوال</string>

    <string name="incorrect_input">user name or password can not  empty</string>
    <string name="incorrect_pass">Password must be Number</string>
    <string name="incorrect_length">Password must have 8 length and more</string>
    <string name="invalid_info">Invalid Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_sign_in">Please Enter Username and Password</string>
    <string name="in_correct_input">user name or password can not be empty</string>
    <string name="in_correct_pass">Password must be Number</string>
    <string name="in_correct_length">Password must have 8 length and mor</string>
    <string name="success_login">You Login Successfully</string>
    <string name="fail_login">Please Enter Correct Information</string>
</resources>