<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controller.Activity.Setting">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_small_font"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/beauty_yellow"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/small_font"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_medium_font"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/beauty_yellow"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/medium_font"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_large_font"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/beauty_yellow"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/large_font"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/change_font_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/black"
            android:fontFamily="@font/b_yekan"
            android:padding="8sp"
            android:text="@string/set_font_txt"
            android:textColor="@color/beauty_yellow"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_color_text_pl"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/beauty_so_pl"
            />

        <Button
            android:id="@+id/btn_color_text_pinkl"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/beauty_pink_light"
            />

        <Button
            android:id="@+id/btn_color_text_pink"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/beauty_pink"
            />

        <Button
            android:id="@+id/btn_color_text_white"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#FBF6F6" />

        <Button
            android:id="@+id/btn_color_text_purple"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/beauty_purple_light"
            />

        <TextView
            android:id="@+id/change_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/black"
            android:fontFamily="@font/b_yekan"
            android:padding="8sp"
            android:text="@string/set_change_color_txt"
            android:textColor="@color/beauty_yellow"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginLeft="5dp">

        <ImageButton
            android:id="@+id/btn_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/ic_go_back" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/ic_save" />

    </LinearLayout>
